--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 <i data-lucide="book-open" class="h-16 w-16 text-blue-600"></i>
             </div>
             <h1 class="text-2xl font-bold text-blue-900 mb-1">TAMU PUSAT SUMBER</h1>
-            <p class="text-sm text-gray-500 mb-8">Pusat Sumber & Perpustakaan</p>
+            <p class="text-sm text-gray-500 mb-8">Pusat Sumber & Perpustakaan MTIB</p>
 
             <button onclick="switchView('guestForm')" class="w-full bg-blue-600 hover:bg-blue-700 text-white font-bold py-3 px-4 rounded shadow transition-colors flex items-center justify-center gap-2 mb-8">
                 <i data-lucide="user-plus" class="h-5 w-5"></i> Daftar Masuk Pelawat
@@ -1124,3 +1124,4 @@
     </script>
 </body>
 </html>
+
