--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 <i data-lucide="book-open" class="h-16 w-16 text-blue-600"></i>
             </div>
             <h1 class="text-2xl font-bold text-blue-900 mb-1">TAMU PUSAT SUMBER</h1>
-            <p class="text-sm text-gray-500 mb-8">Pusat Sumber & Perpustakaan MTIB</p>
+            <p class="text-sm text-gray-500 mb-8">Pusat Sumber & Perpustakaan</p>
 
             <button onclick="switchView('guestForm')" class="w-full bg-blue-600 hover:bg-blue-700 text-white font-bold py-3 px-4 rounded shadow transition-colors flex items-center justify-center gap-2 mb-8">
                 <i data-lucide="user-plus" class="h-5 w-5"></i> Daftar Masuk Pelawat
@@ -226,8 +226,15 @@
                         <div class="bg-white/20 p-3 rounded-full"><i data-lucide="plus-circle" class="h-8 w-8 text-white"></i></div>
                     </button>
                 </div>
-                <div id="widget-visitor" class="hidden bg-gray-50 rounded-lg border p-5 flex items-center justify-center">
-                    <p class="text-sm font-bold text-gray-400 uppercase text-center">Mod Baca Sahaja<br/>(Akses Pelawat)</p>
+                <!-- PENGUBAHSUAIAN: Tukar Banner Pelawat kepada Butang Pendaftaran -->
+                <div id="widget-visitor" class="hidden">
+                    <button onclick="showModal('modal-register')" class="w-full h-full bg-gradient-to-r from-indigo-500 to-indigo-700 rounded-lg shadow-sm border p-5 flex items-center justify-between hover:from-indigo-600 hover:to-indigo-800 transition text-left transform hover:scale-[1.02]">
+                        <div>
+                            <p class="text-sm font-bold text-indigo-100 uppercase">Pendaftaran Baru</p>
+                            <p class="text-xl font-bold text-white mt-1">Daftar Pelawat</p>
+                        </div>
+                        <div class="bg-white/20 p-3 rounded-full"><i data-lucide="user-plus" class="h-8 w-8 text-white"></i></div>
+                    </button>
                 </div>
             </div>
 
@@ -780,7 +787,12 @@
                     state.selectedDate = selectedVisitDate;
                     state.calendarDate = new Date(selectedVisitDate);
                     updateDashboardUI();
-                    showToast("Pelawat berjaya ditambah oleh Admin.");
+                    // PENGUBAHSUAIAN: Paparkan notifikasi berbeza ikut peranan (role)
+                    if (state.role === 'admin') {
+                        showToast("Pelawat berjaya ditambah oleh Admin.");
+                    } else {
+                        showToast("Pendaftaran pelawat tambahan berjaya direkodkan.");
+                    }
                 }
             } catch (err) {
                 console.error(err);
@@ -1124,4 +1136,3 @@
     </script>
 </body>
 </html>
-
